--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -441,7 +441,7 @@ img {
 /*sub menu start*/
 .header > .menu > .menu-container > .nav.main-menu > ul.navigation > li.has-dropdown > .sub-menu {
     position: absolute;
-    display: inline-block;
+    display: none;
     width: 300px;
     max-height: 70vh;
     background-color: var(--bg-light);
@@ -486,11 +486,11 @@ img {
     background-color: var(--primary-extra-light);
 }
 
-.header > .menu > .menu-container > .nav.main-menu > ul.navigation > li.has-dropdown > .sub-menu > ul > li.has-dropdown {
+.header > .menu > .menu-container > .nav.main-menu > ul.navigation > li.has-dropdown > .sub-menu > ul > li.has-sub-dropdown {
     position: relative;
 }
 
-.header > .menu > .menu-container > .nav.main-menu > ul.navigation > li.has-dropdown > .sub-menu > ul > li.has-dropdown > .sub-dropdown-menu {
+.header > .menu > .menu-container > .nav.main-menu > ul.navigation > li.has-dropdown > .sub-menu > ul > li.has-sub-dropdown > .sub-dropdown-menu {
     position: absolute;
     display: none;
     width: 300px;
@@ -502,20 +502,20 @@ img {
     border-radius: 0 15px 15px 15px;
 }
 
-.header > .menu > .menu-container > .nav.main-menu > ul.navigation > li.has-dropdown > .sub-menu > ul > li.has-dropdown > .sub-dropdown-menu > ul {
+.header > .menu > .menu-container > .nav.main-menu > ul.navigation > li.has-dropdown > .sub-menu > ul > li.has-sub-dropdown > .sub-dropdown-menu > ul {
     padding: 0;
     margin: 0;
     width: inherit;
     text-align: start;
 }
 
-.header > .menu > .menu-container > .nav.main-menu > ul.navigation > li.has-dropdown > .sub-menu > ul > li.has-dropdown > .sub-dropdown-menu > ul > li {
+.header > .menu > .menu-container > .nav.main-menu > ul.navigation > li.has-dropdown > .sub-menu > ul > li.has-sub-dropdown > .sub-dropdown-menu > ul > li {
     width: inherit;
     padding: 0;
     margin: 0;
 }
 
-.header > .menu > .menu-container > .nav.main-menu > ul.navigation > li.has-dropdown > .sub-menu > ul > li.has-dropdown > .sub-dropdown-menu > ul > li > a {
+.header > .menu > .menu-container > .nav.main-menu > ul.navigation > li.has-dropdown > .sub-menu > ul > li.has-sub-dropdown > .sub-dropdown-menu > ul > li > a {
     display: block;
     width: 100%;
     height: 100%;
@@ -527,11 +527,11 @@ img {
     text-transform: capitalize;
 }
 
-.header > .menu > .menu-container > .nav.main-menu > ul.navigation > li.has-dropdown > .sub-menu > ul > li.has-dropdown > .sub-dropdown-menu > ul > li > a:hover {
+.header > .menu > .menu-container > .nav.main-menu > ul.navigation > li.has-dropdown > .sub-menu > ul > li.has-sub-dropdown > .sub-dropdown-menu > ul > li > a:hover {
     background-color: var(--primary-extra-light);
 }
 
-.header > .menu > .menu-container > .nav.main-menu > ul.navigation > li.has-dropdown > .sub-menu > ul > li.has-dropdown:hover .sub-dropdown-menu {
+.header > .menu > .menu-container > .nav.main-menu > ul.navigation > li.has-dropdown > .sub-menu > ul > li.has-sub-dropdown:hover .sub-dropdown-menu {
     display: inline-block;
     z-index: 9999999999;
     animation: scrollLeftToRightMenu .5s ease;
@@ -968,7 +968,8 @@ img {
     }
 
     .nav-mobile-menu > ul.navigation > li.mobile-mega-menu::after,
-    .nav-mobile-menu > ul.navigation > li.has-dropdown::after {
+    .nav-mobile-menu > ul.navigation > li.has-dropdown::after,
+    .nav-mobile-menu > ul.navigation > li.has-dropdown > ul.sub-menu > li.has-sub-dropdown::after{
         content: '🢓';
         position: absolute;
         font-size: 20px;
@@ -979,21 +980,30 @@ img {
     }
 
     /*mobile sub menu*/
-    .nav-mobile-menu > ul.navigation > li.has-dropdown > ul.sub-menu {
+    .nav-mobile-menu > ul.navigation > li.has-dropdown > ul.sub-menu,
+    .nav-mobile-menu > ul.navigation > li.has-dropdown > ul.sub-menu > li.has-sub-dropdown > ul.sub-dropdown-menu {
         background: var(--secondary);
         display: none;
         margin-top: -100%;
         opacity: 0;
     }
 
-    .nav-mobile-menu > ul.navigation > li.has-dropdown > ul.sub-menu.active {
+    .nav-mobile-menu > ul.navigation > li.has-dropdown > ul.sub-menu.active,
+    .nav-mobile-menu > ul.navigation > li.has-dropdown > ul.sub-menu > li.has-sub-dropdown > ul.sub-dropdown-menu.active {
         display: block;
         margin-top: 0;
         opacity: 1;
         animation: subMenuBottomToTop 1s ease;
     }
+    /*.nav-mobile-menu > ul.navigation > li.has-dropdown > ul.sub-menu.active {*/
+    /*    display: block;*/
+    /*    margin-top: 0;*/
+    /*    opacity: 1;*/
+    /*    animation: subMenuBottomToTop 1s ease;*/
+    /*}*/
 
-    .nav-mobile-menu > ul.navigation > li.has-dropdown > ul.sub-menu > li {
+    .nav-mobile-menu > ul.navigation > li.has-dropdown > ul.sub-menu > li,
+    .nav-mobile-menu > ul.navigation > li.has-dropdown > ul.sub-menu > li.has-sub-dropdown > ul.sub-dropdown-menu > li {
         border-bottom: .02px solid var(--primary);
         text-align: left;
         background: linear-gradient(to right, var(--primary) 50%, var(--secondary) 50%);
@@ -1002,19 +1012,23 @@ img {
         transition: all .5s ease-out;
     }
 
-    .nav-mobile-menu > ul.navigation > li.has-dropdown > ul.sub-menu > li:first-child {
+    .nav-mobile-menu > ul.navigation > li.has-dropdown > ul.sub-menu > li:first-child,
+    .nav-mobile-menu > ul.navigation > li.has-dropdown > ul.sub-menu > li.has-sub-dropdown > ul.sub-dropdown-menu > li:first-child {
         border-top: .02px solid var(--primary);
     }
 
-    .nav-mobile-menu > ul.navigation > li.has-dropdown > ul.sub-menu > li:last-child {
+    .nav-mobile-menu > ul.navigation > li.has-dropdown > ul.sub-menu > li:last-child,
+    .nav-mobile-menu > ul.navigation > li.has-dropdown > ul.sub-menu > li.has-sub-dropdown > ul.sub-dropdown-menu > li:last-child {
         border-bottom: none;
     }
 
-    .nav-mobile-menu > ul.navigation > li.has-dropdown > ul.sub-menu > li:hover {
+    .nav-mobile-menu > ul.navigation > li.has-dropdown > ul.sub-menu > li:hover,
+    .nav-mobile-menu > ul.navigation > li.has-dropdown > ul.sub-menu > li.has-sub-dropdown > ul.sub-dropdown-menu > li:hover {
         background-position: left bottom;
     }
 
-    .nav-mobile-menu > ul.navigation > li.has-dropdown > ul.sub-menu > li > a {
+    .nav-mobile-menu > ul.navigation > li.has-dropdown > ul.sub-menu > li > a,
+    .nav-mobile-menu > ul.navigation > li.has-dropdown > ul.sub-menu > li.has-sub-dropdown > ul.sub-dropdown-menu > li > a {
         display: block;
         padding: 10px 30px;
         color: var(--white);
@@ -1024,7 +1038,8 @@ img {
         text-transform: capitalize;
     }
 
-    .nav-mobile-menu > ul.navigation > li.has-dropdown > ul.sub-menu > li > a > span {
+    .nav-mobile-menu > ul.navigation > li.has-dropdown > ul.sub-menu > li > a > span,
+    .nav-mobile-menu > ul.navigation > li.has-dropdown > ul.sub-menu > li.has-sub-dropdown > ul.sub-dropdown-menu > li > a > span {
         color: var(--white);
     }
 
